# svg-rust-nodejs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.d.ts  index.js  package-lock.json  package.json
app/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
app/scripts/: build.sh
app/src/: app.ts  hack-dominant-baseline.ts  index-vercel.ts  index.ts  resolve-external-href.ts  utils.ts
examples/: demo-librsvg.rs  demo-resvg.rs
misc/: README.md
misc/examples/: .gitignore
misc/fonts/: .gitignore
scripts/: release.sh
src/: add.rs  lib.rs  svg_to_png.rs
